# MyGO

./: .gitignore  grpo_trainer.py  main.py  pyproject.toml  utils.py
_test/: data_service_test.py  perf_test.py  tf_service_test.py  vllm_service_test.py
_test/implement/dataset/: common.py  gsm8k_test.py
_test/implement/model/: common.py  qwen_3.py
_test/test_data/: convs.py
config/: fsdp.yaml  fsdp2.yaml  qwen2.5-1.5b_gsm8k.py  qwen2.5.yaml  qwen2.5vl-3b_geoqa.py  qwen2vl-2b_geoqa.py  qwen2vl-2b_scienceqa.py  qwen2vl_2b.yaml  qwen2vl_2b_qa.yaml  qwen3-1.7b_gsm8k.py  utils.py
data_service/: data_client.py  data_server.py  data_service.py  grouping.py
data_service/prompt/: science_qa.txt
data_service/rewards/: accuracy_r1v.py
data_service/typing/: grpo_data.py  message.py  messages.py
implement/dataset/: geoqa.py  gsm8k.py  r1v_geoqa.py  science_qa.py  utils.py
implement/model/: basic.py  qwen.py  qwen_tf.py  qwen_vl.py  qwen_vl_tf.py  qwen_vl_vllm.py  qwen_vllm.py  utils.py
implement/reward/: acc_math.py  acc_mc.py  acc_simple.py  format.py
test/: data_service_test.py  tf_service_test.py  vllm_service_test.py
test/implement/dataset/: r1v_geoqa_test.py  science_qa_test.py
test/implement/model/: qwen_tf_test.py  qwen_vl_tf_test.py  qwen_vl_vllm_test.py
tf_service/: tf_client.py  tf_server.py
utils/: decorators.py  metrics.py
vllm_service/: nccl_client.py  vllm_client.py  vllm_server.py
